# interactive_object_recognition

./: README.md
cloud_saver/: CMakeLists.txt  package.xml
cloud_saver/cfg/cpp/cloud_saver/: SaverConfig.h
cloud_saver/docs/: SaverConfig-usage.dox  SaverConfig.dox  SaverConfig.wikidoc
cloud_saver/include/cloud_saver/: cloud_saver.h
cloud_saver/src/: cloud_saver.cpp  main_saver.cpp
cloud_saver/src/cloud_saver/cfg/: SaverConfig.py
dense_reconstruction/: CMakeLists.txt  package.xml
dense_reconstruction/include/dense_reconstruction/: DenseReconstruction.hpp  point_type.h  point_type.hpp
dense_reconstruction/src/: main_reconstruction.cpp
feature_cv_waitinglist/: CMakeLists.txt  package.xml
feature_cv_waitinglist/cfg/: FeatureConfig.cfg
feature_cv_waitinglist/cfg/cpp/feature_cv_waitinglist/: FeatureConfig.h
feature_cv_waitinglist/docs/: FeatureConfig-usage.dox  FeatureConfig.dox  FeatureConfig.wikidoc
feature_cv_waitinglist/include/feature_cv_waitinglist/: feature_matching.h  homography_estimation.h  sift_gpu_wrapper.h
feature_cv_waitinglist/src/: feature_matching.cpp  homography_estimation.cpp  sift_gpu_wrapper.cpp
feature_cv_waitinglist/src/feature_cv_waitinglist/cfg/: FeatureConfig.py
pcd_io/: CMakeLists.txt  package.xml
pcd_io/include/pcd_io/: pcd_io.h
pcd_io/src/: pcd_io.cpp
pcl_typedefs/: CMakeLists.txt  package.xml
pcl_typedefs/include/pcl_typedefs/: pcl_typedefs.h
ransac_waitinglist/: CMakeLists.txt  package.xml
ransac_waitinglist/cfg/cpp/ransac_waitinglist/: RANSACConfig.h
ransac_waitinglist/include/ransac_waitinglist/: ransac_transformation.h
ransac_waitinglist/src/: ransac_transformation.cpp
ransac_waitinglist/src/ransac_waitinglist/cfg/: RANSACConfig.py
template_library/: .gitignore  CMakeLists.txt  package.xml
template_library/cfg/: LibraryConfig.cfg
template_library/cfg/cpp/template_library/: LibraryConfig.h
template_library/docs/: LibraryConfig-usage.dox  LibraryConfig.dox  LibraryConfig.wikidoc
template_library/include/template_library/: pose.h  template_library.h
template_library/src/: main_library.cpp  template_library.cpp
template_library/src/template_library/cfg/: LibraryConfig.py
template_matching/: CMakeLists.txt  package.xml
template_matching/cfg/: MatcherConfig.cfg
template_matching/cfg/cpp/template_matching/: MatcherConfig.h
template_matching/docs/: MatcherConfig-usage.dox  MatcherConfig.dox  MatcherConfig.wikidoc
template_matching/include/template_matching/: object_data.h  objects_database.h  probabilisticmatcher.h  template_matching.h
template_matching/launch/: template.launch
template_matching/src/: main.cpp  main_probabilistic.cpp  object_data.cpp  objects_database.cpp  probabilisticmatcher.cpp  template_matching.cpp  util.cpp
template_matching/src/template_matching/cfg/: MatcherConfig.py
visualizer/: CMakeLists.txt  package.xml
visualizer/include/visualizer/: Visualizer.h  VisualizerImpl.h
visualizer/src/: VisualizerImp.cpp
