<?xml version="1.0"?>
<package>
  <name>template_matching</name>
  <version>0.0.0</version>
  <description>The template_matching package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="eric@todo.todo">eric</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pcl_typedefs</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>feature_cv_waitinglist</build_depend>
  <build_depend>ransac_waitinglist</build_depend>
  <build_depend>dense_reconstruction</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>template_library</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcd_io</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>opencv</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>feature_cv_waitinglist</run_depend>
  <run_depend>ransac_waitinglist</run_depend>
  <run_depend>dense_reconstruction</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>template_library</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcd_io</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
